# plyphon

./: .gitignore  Cargo.toml  FEATURE_PARITY.md  README.md  Trunk.toml  Trunk.worklet.toml  example-motif_bg.wasm  flake.nix  index.html  plyphon-example-motif.js  plyphon-example-motif_bg.wasm  plyphon-example.js  plyphon-example_bg.wasm  release-plz.toml  shell-web.nix  shell.nix
auto-wah/: example-auto-wah_bg.wasm  index.html
bell/: example-bell.js  example-bell_bg.wasm
bouncing-ball/: example-bouncing-ball_bg.wasm
chaos/: example-chaos.js  example-chaos_bg.wasm  index.html
comb-string/: example-comb-string_bg.wasm  index.html
control/: example-control.js  example-control_bg.wasm  index.html
crates/example-audio/: Cargo.toml
crates/example-audio/src/: lib.rs
crates/examples/bouncing-ball/: Cargo.toml
crates/examples/bouncing-ball/src/: main.rs
crates/examples/custom-unit/: Cargo.toml
crates/examples/custom-unit/src/: main.rs
crates/examples/duty-seq/: Cargo.toml
crates/examples/duty-seq/src/: main.rs
crates/examples/feedback/: Cargo.toml
crates/examples/feedback/src/: main.rs
crates/examples/glide/: Cargo.toml
crates/examples/glide/src/: main.rs
crates/examples/granular/: Cargo.toml
crates/examples/granular/src/: main.rs
crates/examples/hard-sync/: Cargo.toml
crates/examples/hard-sync/src/: main.rs
crates/examples/node-control/: Cargo.toml
crates/examples/node-control/src/: main.rs
crates/examples/operators/: Cargo.toml
crates/examples/operators/src/: main.rs
crates/examples/osc/: Cargo.toml
crates/examples/osc/src/: main.rs
crates/examples/pan/: Cargo.toml
crates/examples/pan/src/: main.rs
crates/examples/phase-vocoder/: Cargo.toml
crates/examples/phase-vocoder/src/: main.rs
crates/examples/record-to-disk/: Cargo.toml
crates/examples/record-to-disk/src/: main.rs
crates/examples/render/: Cargo.toml
crates/examples/render/src/: main.rs
crates/examples/reverb/: Cargo.toml
crates/examples/reverb/src/: main.rs
crates/plyphon/: CHANGELOG.md  Cargo.toml
crates/plyphon-buffers/: CHANGELOG.md  Cargo.toml
crates/plyphon-buffers/src/: lib.rs
crates/plyphon-buffers/tests/: drain.rs  stream.rs
crates/plyphon-cli/: CHANGELOG.md  Cargo.toml
crates/plyphon-cli/src/: audio.rs  bufsource.rs  cli.rs  defs.rs  duplex.rs  main.rs  options.rs  play.rs  render.rs  server.rs  transport.rs  wav.rs
crates/plyphon-dsp/: CHANGELOG.md  Cargo.toml
crates/plyphon-dsp/src/: buffer.rs  bus.rs  fft.rs  interp.rs  lib.rs  math.rs  ops.rs  rate.rs  rng.rs  stream.rs  wavetable.rs
crates/plyphon-example/: Cargo.toml
crates/plyphon-example-control/: Cargo.toml
crates/plyphon-example-control/src/: main.rs
crates/plyphon-example-motif/: Cargo.toml
crates/plyphon-example-motif/src/: main.rs
crates/plyphon-example-motif/web/: index.html
crates/plyphon-example-sampler/: Cargo.toml
crates/plyphon-example-sampler/src/: main.rs
crates/plyphon-example-sampler/web/: index.html
crates/plyphon-example-stream/: Cargo.toml
crates/plyphon-example-stream/src/: main.rs
crates/plyphon-example-stream/web/: index.html
crates/plyphon-example/src/: demo.rs  engine_native.rs  engine_web.rs  main.rs  sine.rs
crates/plyphon-example/web/: index.html
crates/plyphon-osc/: CHANGELOG.md  Cargo.toml
crates/plyphon-osc/src/: args.rs  bgen.rs  encode.rs  lib.rs  score.rs
crates/plyphon-osc/tests/: buffer.rs  buffer_channel.rs  buffer_close.rs  buffer_read_region.rs  buffer_read_stream.rs  buffer_write.rs  command.rs  def_load.rs  group.rs  node_trace.rs  osc.rs  query.rs  send_reply.rs  trigger.rs
crates/plyphon-rt/: CHANGELOG.md  Cargo.toml
crates/plyphon-rt/src/: command.rs  graph.rs  lib.rs  nrt.rs  options.rs  sched.rs  tree.rs  world.rs
crates/plyphon-unit/: CHANGELOG.md  Cargo.toml
crates/plyphon-unit/src/: error.rs  graphdef.rs  lib.rs
crates/plyphon-unit/src/unit/: amp_comp.rs  band_limited.rs  bank.rs  binary_op.rs  buf_rd.rs  buf_wr.rs  chaos.rs  decay.rs  delay.rs  deltap.rs  disk_out.rs  dynamics.rs  env.rs  eq.rs  fft.rs  filter.rs  filter_simple.rs  formant.rs  freeverb.rs  gendy.rs  grain.rs  gverb.rs  hilbert.rs  info.rs  input.rs  io.rs  lf.rs  lf_noise.rs  line.rs  local_buf.rs  local_io.rs  measure.rs  median.rs  mod.rs  moog.rs  node_ctl.rs  noise.rs  one_pole.rs  out.rs  pan.rs  (+31 more)
crates/plyphon-unit/src/unit/demand/: dbrown.rs  dbufrd.rs  dbufwr.rs  demand_ugen.rs  dgeom.rs  dibrown.rs  diwhite.rs  dpoll.rs  drand.rs  dseq.rs  dser.rs  dseries.rs  duty.rs  dwhite.rs  dxrand.rs  mod.rs
crates/plyphon/src/: buffer.rs  bus.rs  command.rs  controller.rs  engine.rs  error.rs  graph.rs  graphdef.rs  io.rs  lib.rs  nrt.rs  rate.rs  render.rs  rng.rs  stream.rs  synth.rs  synthdef.rs  tree.rs  wavetable.rs  world.rs
crates/plyphon/src/synthdef/: read.rs
crates/plyphon/src/ugen/: band_limited.rs  binary_op.rs  disk_in.rs  env.rs  filter.rs  input.rs  io.rs  lf.rs  line.rs  mod.rs  noise.rs  out.rs  pan.rs  play_buf.rs  registry.rs  sin_osc.rs  unary_op.rs  util.rs
crates/plyphon/src/unit/: binary_op.rs  disk_in.rs  env.rs  filter.rs  input.rs  io.rs  lf.rs  line.rs  mod.rs  noise.rs  out.rs  registry.rs  sin_osc.rs  unary_op.rs  util.rs
crates/plyphon/tests/: addreplace.rs  amp_comp.rs  audio_control.rs  audio_input.rs  bank.rs  beq.rs  buf_delay.rs  buf_rd.rs  buffer.rs  buffer_write.rs  bus_routing.rs  chaos.rs  control_family.rs  control_rate.rs  def_graph_rate.rs  delay.rs  delay_family.rs  deltap.rs  demand.rs  demand_buffer.rs  demand_generators.rs  demand_list.rs  denormals.rs  disk_out.rs  done_action.rs  dynamics.rs  env.rs  eq.rs  feedback.rs  fft.rs  filter.rs  filter_primitives.rs  freeverb.rs  grain.rs  group.rs  gverb.rs  hilbert.rs  host_api.rs  info.rs  initial_controls.rs  (+51 more)
crates/rt-alloc/: Cargo.toml
crates/rt-alloc/benches/: alloc.rs
crates/rt-alloc/src/: bins.rs  layout.rs  lib.rs  pool.rs
crates/rt-alloc/tests/: model.rs
custom-unit/: example-custom-unit.js  example-custom-unit_bg.wasm  index.html
delay/: example-delay.js  example-delay_bg.wasm  index.html
(+714 files in other folders)
