[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
edition = "2024"
homepage = "https://github.com/mitchmindtree/plyphon"
license = "GPL-3.0-or-later"
repository = "https://github.com/mitchmindtree/plyphon"

[workspace.dependencies]
# Internal crates.
plyphon = { version = "0.1.0", path = "crates/plyphon" }
plyphon-buffers = { version = "0.1.0", path = "crates/plyphon-buffers" }
plyphon-dsp = { version = "0.1.0", path = "crates/plyphon-dsp" }
plyphon-osc = { version = "0.1.0", path = "crates/plyphon-osc" }
plyphon-rt = { version = "0.1.0", path = "crates/plyphon-rt" }
plyphon-unit = { version = "0.1.0", path = "crates/plyphon-unit" }
rt-alloc = { version = "0.1.0", path = "crates/rt-alloc" }
scgf = { version = "0.1.0", path = "crates/scgf" }

# Shared dependencies.
# Safe, no_std byte/slice reinterpretation - backs Pod ugen state in the rt-pool.
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.16"
# Lock-free SPSC ring for control -> RT command delivery (wait-free, no_std-friendly).
rtrb = "0.3"
# OSC encoding/decoding for the SuperCollider-compatible command front-end.
rosc = "0.11"
# Ergonomic error types.
thiserror = "2"

# Web (wasm) example dependencies.
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[profile.wasm_release]
inherits = "release"
opt-level = 'z'  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
panic = 'abort'  # Remove panic unwinding to reduce size
strip = true     # Remove debug symbols
debug = false
