[package]
name = "example-audio"
version = "0.1.0"
publish = false
description = "Shared cpal output-stream glue for the plyphon examples (native + web AudioWorklet)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cpal.workspace = true

# Web-only: cpal's wasm backend. Without the `audioworklet` feature this is the default
# Web Audio (ScriptProcessor) host; with it, cpal's AudioWorklet host is selected instead.
# `web-sys` (Window) lets us detect the worklet thread (see `on_worklet_thread`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Window"] }
# Drives the control-plane tick on the web (see `run_control`).
gloo-timers = "0.3"

[features]
# Opt into cpal's AudioWorklet backend. Only ever enable this for `wasm32` builds compiled with
# WASM atomics + `-Z build-std` (see `pkgs/plyphon-website-worklet.nix`); on other targets it
# pulls cpal's wasm-only web-sys deps and will not build.
audioworklet = ["cpal/audioworklet"]
