[package]
name = "example-audio"
version = "0.1.0"
publish = false
description = "Shared cpal output-stream glue for the plyphon examples (native + web AudioWorklet)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cpal.workspace = true

# Web-only: cpal's wasm backend. Without the `audioworklet` feature this is the default
# Web Audio (ScriptProcessor) host; with it, cpal's AudioWorklet host is selected instead.
# `web-sys` (Window) lets us detect the worklet thread (see `on_worklet_thread`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Window"] }
# Drives the control-plane tick on the web (see `run_control`).
gloo-timers = "0.3"

[features]
# cpal's AudioWorklet host on the web - a real audio thread, off the deprecated ScriptProcessor
# host. Every example enables it by default; the cpal deps it pulls are all wasm32-gated, so it is a
# no-op on native. Build an example with `--no-default-features` to fall back to cpal's default host
# (the ScriptProcessor Web Audio host on the web). The wasm site build compiles this with WASM
# atomics + `-Z build-std` for the shared-memory worklet thread (see `pkgs/plyphon-website.nix`).
audioworklet = ["cpal/audioworklet"]
