[package]
name = "plyphon-buffers"
version = "0.1.0"
description = "Async buffer-source traits for loading sample data into the plyphon engine (native and web)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["plyphon/std", "thiserror/std"]

[dependencies]
plyphon.workspace = true
thiserror.workspace = true
