[package]
name = "plyphon-cli"
version = "0.1.0"
publish = false
description = "An scsynth-compatible OSC synthesis server and offline renderer (the plyphon CLI)."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "plyphon"
path = "src/main.rs"

[dependencies]
plyphon.workspace = true
plyphon-osc.workspace = true
plyphon-buffers.workspace = true
scgf.workspace = true
cpal.workspace = true
rosc.workspace = true
hound = "3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
