[package]
name = "plyphon-example"
version = "0.1.0"
description = "Minimal SinOsc example played via cpal, natively and on the web."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "plyphon-example"
path = "src/main.rs"

[dependencies]
cpal.workspace = true
plyphon.workspace = true

# Web-only: cpal's WebAudio backend plus the wasm glue.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
console_error_panic_hook.workspace = true
