[package]
name = "plyphon-osc"
version = "0.1.0"
description = "SuperCollider-compatible OSC command front-end for the plyphon engine."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["plyphon/std", "plyphon-buffers/std", "rosc/std", "thiserror/std"]

[dependencies]
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
plyphon.workspace = true
plyphon-buffers.workspace = true
rosc.workspace = true
thiserror.workspace = true

[dev-dependencies]
scgf.workspace = true
