[package]
name = "plyphon-rt"
version = "0.1.0"
description = "The plyphon real-time audio driver: the World engine, node tree, command protocol, and NRT cleanup."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
plyphon-dsp.workspace = true
plyphon-unit.workspace = true
rt-alloc.workspace = true
rtrb.workspace = true
