[package]
name = "plyphon-rt"
version = "0.1.1"
description = "The plyphon real-time audio driver: the World engine, node tree, command protocol, and NRT cleanup."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "fft"]
std = ["plyphon-dsp/std", "plyphon-unit/std", "rt-alloc/std", "rtrb/std"]
# FFT/spectral support: turns on the `FftTables` plans and the FFT/IFFT/PV_* units. Depends on `std`.
fft = ["std", "plyphon-dsp/fft", "plyphon-unit/fft"]

[dependencies]
bytemuck.workspace = true
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
plyphon-dsp.workspace = true
plyphon-unit.workspace = true
rt-alloc.workspace = true
rtrb.workspace = true
