[package]
name = "plyphon-unit"
version = "0.1.0"
description = "The plyphon unit-generator abstraction: the `Unit` trait, the built-in units, and the compiled graph definition."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
plyphon-dsp.workspace = true
thiserror.workspace = true
