[package]
name = "plyphon"
version = "0.1.0"
description = "A pure-Rust rewrite of SuperCollider's scsynth audio engine core."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = [
    "plyphon-dsp/std",
    "plyphon-rt/std",
    "plyphon-unit/std",
    "rtrb/std",
    "scgf/std",
    "thiserror/std",
]

[dependencies]
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
plyphon-dsp.workspace = true
plyphon-rt.workspace = true
plyphon-unit.workspace = true
rtrb.workspace = true
scgf.workspace = true
thiserror.workspace = true
