[package]
name = "plyphon"
version = "0.1.2"
description = "A pure-Rust rewrite of SuperCollider's scsynth audio engine core."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std", "fft"]
std = [
    "plyphon-dsp/std",
    "plyphon-rt/std",
    "plyphon-unit/std",
    "rtrb/std",
    "scgf/std",
    "thiserror/std",
]
# FFT/spectral support (FFT/IFFT/PV_* units + the `FftTables` plans). Depends on `std`.
fft = ["std", "plyphon-dsp/fft", "plyphon-rt/fft", "plyphon-unit/fft"]

[dependencies]
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
plyphon-dsp.workspace = true
plyphon-rt.workspace = true
plyphon-unit.workspace = true
rtrb.workspace = true
scgf.workspace = true
thiserror.workspace = true
