[package]
name = "example-custom-unit"
version = "0.1.0"
publish = false
description = "Implement a custom unit generator and register it alongside plyphon's base set."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# A downstream custom unit needs only `plyphon` (the whole unit API is re-exported from it) plus
# `bytemuck` to derive the `Pod` state. `cpal` is just this demo's audio backend.
bytemuck.workspace = true
cpal.workspace = true
plyphon.workspace = true

# Web-only: cpal's WebAudio backend plus the wasm glue.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
console_error_panic_hook.workspace = true
