[package]
name = "example-custom-unit"
version = "0.1.0"
publish = false
description = "Implement a custom unit generator and register it alongside plyphon's base set."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# A downstream custom unit needs only `plyphon` (the whole unit API is re-exported from it) plus
# `bytemuck` to derive the `Pod` state. `example-audio` is just this demo's audio backend.
bytemuck.workspace = true
example-audio.workspace = true
plyphon.workspace = true

# Web-only: the wasm panic hook for readable console errors.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[features]
# Build the web demo on cpal's AudioWorklet backend (see pkgs/plyphon-website.nix).
default = ["audioworklet"]
audioworklet = ["example-audio/audioworklet"]
