[package]
name = "example-duty-seq"
version = "0.1.0"
publish = false
description = "A plyphon example: a self-driving melodic sequencer clocked by Duty.kr pulling Dseq/Dseries/Dwhite demand-rate sources entirely on the audio thread."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cpal.workspace = true
plyphon.workspace = true

# Web-only: cpal's WebAudio backend, the wasm glue, and a timer to tick the control plane.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
console_error_panic_hook.workspace = true
gloo-timers = "0.3"
