[package]
name = "example-feedback"
version = "0.1.0"
publish = false
default-run = "example-feedback"
description = "A plyphon demo: feedback PM - oscillators modulated by their own one-block-delayed output via LocalIn/LocalOut, natively and on the web."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "example-feedback"
path = "src/main.rs"

[dependencies]
cpal.workspace = true
plyphon.workspace = true

# Web-only: cpal's WebAudio backend plus the wasm glue.
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { workspace = true, features = ["wasm-bindgen"] }
console_error_panic_hook.workspace = true
