[package]
name = "example-glide"
version = "0.1.0"
publish = false
default-run = "example-glide"
description = "A plyphon demo: the control family - a LagControl portamento lead with TrigControl accents, natively and on the web."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "example-glide"
path = "src/main.rs"

[dependencies]
example-audio.workspace = true
plyphon.workspace = true

# Web-only: the wasm panic hook for readable console errors.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[features]
# Build the web demo on cpal's AudioWorklet backend (see pkgs/plyphon-website-worklet.nix).
audioworklet = ["example-audio/audioworklet"]
