[package]
name = "example-granular"
version = "0.1.0"
publish = false
description = "A granular time-stretch: Warp1 smears a short synthesized arpeggio into a slowly-morphing stereo pad, holding pitch while a slow pointer stretches time."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
example-audio.workspace = true
plyphon.workspace = true

# Web-only: the wasm panic hook for readable console errors.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[features]
# Build the web demo on cpal's AudioWorklet backend (see pkgs/plyphon-website-worklet.nix).
audioworklet = ["example-audio/audioworklet"]
