[package]
name = "example-node-control"
version = "0.1.0"
publish = false
default-run = "example-node-control"
description = "A plyphon demo: in-graph node-to-node control - one node pauses, resumes, and frees another by id, natively and on the web."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "example-node-control"
path = "src/main.rs"

[dependencies]
example-audio.workspace = true
plyphon.workspace = true

# Web-only: the wasm panic hook, plus a timer to tick the (non-uniform) control plane directly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
gloo-timers = "0.3"

[features]
# Build the web demo on cpal's AudioWorklet backend (see pkgs/plyphon-website.nix).
default = ["audioworklet"]
audioworklet = ["example-audio/audioworklet"]
