[package]
name = "example-osc"
version = "0.1.0"
publish = false
description = "A plyphon example: driving the engine through encoded OSC packets (no networking) and printing the replies."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
example-audio.workspace = true
plyphon.workspace = true
plyphon-osc.workspace = true
rosc.workspace = true
scgf.workspace = true

# Web-only: the wasm panic hook for readable console errors.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[features]
# Build the web demo on cpal's AudioWorklet backend (see pkgs/plyphon-website.nix).
default = ["audioworklet"]
audioworklet = ["example-audio/audioworklet"]
